--- a/landen/vulkan_graphics3d_landen.vcxproj.filters
+++ b/landen/vulkan_graphics3d_landen.vcxproj.filters
@@ -8,6 +8,12 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
+    <Filter Include="Header Files\scene">
+      <UniqueIdentifier>{7c5c906a-1884-424a-9be2-646595dc2076}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\scene">
+      <UniqueIdentifier>{860e692a-d40c-4076-a348-f213175fb2ad}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="framework.cpp">
@@ -28,8 +34,8 @@
     <ClCompile Include="_.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="application3d.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="scene\main.cpp">
+      <Filter>Source Files\scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -57,8 +63,8 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="application3d.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="scene\main.h">
+      <Filter>Header Files\scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
