--- a/continuum/vulkan_graphics3d_continuum.vcxproj
+++ b/continuum/vulkan_graphics3d_continuum.vcxproj
@@ -783,7 +783,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
-    <ClCompile Include="application3d.cpp" />
     <ClCompile Include="document.cpp" />
     <ClCompile Include="framework.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -798,16 +797,17 @@
     <ClCompile Include="impact.cpp" />
     <ClCompile Include="main_frame.cpp" />
     <ClCompile Include="pane_impact.cpp" />
+    <ClCompile Include="scene\main.cpp" />
     <ClCompile Include="_.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application.h" />
-    <ClInclude Include="application3d.h" />
     <ClInclude Include="document.h" />
     <ClInclude Include="impact.h" />
     <ClInclude Include="main_frame.h" />
     <ClInclude Include="pane_impact.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="scene\main.h" />
     <ClInclude Include="system_basic_render.h" />
     <ClInclude Include="system_point_light.h" />
     <ClInclude Include="_.h" />
