<3TbsJegElskerDig!! 🌌🌍 [ opengl : continuum(by V0idsEmbrace) apps ] [ day 10 ] [ C++ ] More OpenGL abstraction for ca2 at Windows <3TbsJegElskerDig!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi : Thank you!! Keeping things tidy, keeping things clean, keep ca2 build clean, what's that error camilo... !!

Mummi : Thank you!! Release to the client, he is waiting!! Don't make him wait!! Attend well the client like he were a king!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

V0idsEmbrace contribution while assisting to code graphics3d (protos vulkan-land and opengl-land)!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

MrShoor (from Russia) streaming C++ coding contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest cont

--- a/continuum/vulkan_graphics3d_continuum.vcxproj
+++ b/continuum/vulkan_graphics3d_continuum.vcxproj
@@ -830,8 +830,8 @@
     <ProjectReference Include="..\..\..\source\app\base\base.vcxproj">
       <Project>{a216abd4-26c4-4746-96b3-9d30ed28cf92}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\app\cube\cube.vcxproj">
-      <Project>{c5fadcf3-ca08-483d-b5f9-2ce2d2beccbe}</Project>
+    <ProjectReference Include="..\..\app-graphics3d\graphics3d_vulkan\graphics3d_vulkan.vcxproj">
+      <Project>{14be1858-637e-4577-a1f3-daed81d5d9df}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\app\axis\axis.vcxproj">
       <Project>{a2cbd4ed-ed0f-482b-9b16-f48f21c32835}</Project>
@@ -841,9 +841,6 @@
     </ProjectReference>
     <ProjectReference Include="..\..\app\core\core.vcxproj">
       <Project>{29c1eb5b-060e-4021-ae12-d1bcfb1b1359}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\graphics3d_vulkan\graphics3d_vulkan.vcxproj">
-      <Project>{928e4e5f-e062-43d3-8073-f3826381a2e1}</Project>
     </ProjectReference>
     <ProjectReference Include="..\landen\vulkan_graphics3d_landen.vcxproj">
       <Project>{5aafbd19-daed-40a5-bbd6-2fb07425c874}</Project>
