--- a/landen/vulkan_graphics3d_landen.vcxproj
+++ b/landen/vulkan_graphics3d_landen.vcxproj
@@ -753,8 +753,8 @@
     <ClInclude Include="_vulkan.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\app\cube\cube.vcxproj">
-      <Project>{c5fadcf3-ca08-483d-b5f9-2ce2d2beccbe}</Project>
+    <ProjectReference Include="..\..\app-graphics3d\graphics3d_vulkan\graphics3d_vulkan.vcxproj">
+      <Project>{14be1858-637e-4577-a1f3-daed81d5d9df}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\app\acme\acme.vcxproj">
       <Project>{638b242f-0f21-41c3-9f66-724660046133}</Project>
@@ -779,9 +779,6 @@
     </ProjectReference>
     <ProjectReference Include="..\..\app\core\core.vcxproj">
       <Project>{29c1eb5b-060e-4021-ae12-d1bcfb1b1359}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\graphics3d_vulkan\graphics3d_vulkan.vcxproj">
-      <Project>{928e4e5f-e062-43d3-8073-f3826381a2e1}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
